student progress - doPost